// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots App/Header Logged In 1`] = `
<header>
  <nav
    className="navbar navbar-expand-lg navbar-light bg-light"
  >
    <a
      className="navbar-brand"
      href="#home"
    >
      <img
        alt="Outrek's Logo"
        className="d-inline-block align-top"
        height="30"
        src="brand-logoType.svg"
        width="auto"
      />
    </a>
    <button
      aria-controls="basic-navbar-nav"
      aria-label="Toggle navigation"
      className="navbar-toggler collapsed"
      onClick={[Function]}
      type="button"
    >
      <span
        className="navbar-toggler-icon"
      />
    </button>
    <div
      aria-expanded={null}
      className="navbar-collapse collapse"
      id="basic-navbar-nav"
    >
      <div
        className="mr-auto navbar-nav"
        onKeyDown={[Function]}
      >
        <a
          className="nav-link"
          data-rb-event-key="#link"
          href="#link"
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          Link
        </a>
        <div
          className="nav-item dropdown"
        >
          <a
            aria-expanded={false}
            aria-haspopup={true}
            className="dropdown-toggle nav-link"
            data-rb-event-key={null}
            href="#"
            id="basic-nav-dropdown"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
          >
            Dropdown
          </a>
        </div>
      </div>
    </div>
    <div>
      <button
        className="btn btn-primary btn-sm"
        disabled={false}
        type="button"
      >
        Log out
      </button>
    </div>
  </nav>
</header>
`;

exports[`Storyshots App/Header Logged Out 1`] = `
<header>
  <nav
    className="navbar navbar-expand-lg navbar-light bg-light"
  >
    <a
      className="navbar-brand"
      href="#home"
    >
      <img
        alt="Outrek's Logo"
        className="d-inline-block align-top"
        height="30"
        src="brand-logoType.svg"
        width="auto"
      />
    </a>
    <button
      aria-controls="basic-navbar-nav"
      aria-label="Toggle navigation"
      className="navbar-toggler collapsed"
      onClick={[Function]}
      type="button"
    >
      <span
        className="navbar-toggler-icon"
      />
    </button>
    <div
      aria-expanded={null}
      className="navbar-collapse collapse"
      id="basic-navbar-nav"
    >
      <div
        className="mr-auto navbar-nav"
        onKeyDown={[Function]}
      >
        <a
          className="nav-link"
          data-rb-event-key="#link"
          href="#link"
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          Link
        </a>
        <div
          className="nav-item dropdown"
        >
          <a
            aria-expanded={false}
            aria-haspopup={true}
            className="dropdown-toggle nav-link"
            data-rb-event-key={null}
            href="#"
            id="basic-nav-dropdown"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
          >
            Dropdown
          </a>
        </div>
      </div>
    </div>
    <div>
      <button
        className="btn btn-outline-primary btn-sm"
        disabled={false}
        type="button"
        value="Log in"
      >
        Log in
      </button>
      <button
        className="btn btn-outline-primary btn-sm"
        disabled={false}
        type="button"
        value="Sign up"
      >
        Sign up
      </button>
    </div>
  </nav>
</header>
`;
